--- a/pages/index.html
+++ b/pages/index.html
@@ -242,21 +242,58 @@
                 </div>
             </div>
             <div class="cont_lista_mis_servicios">
-                <a class="cont_item_mis_servicios cursor-scale small" href="">
+                <a class="cont_item_mis_servicios cursor-scale small " href="">
                     <h4>UX-UI</h4>
                     <P>( 01 )</P>
+                    <section class="cont_slider_banderas">
+                        <div class="sslider_uno">
+                            <img src="../assets/img/uxuibandera.svg" alt="img_uno">
+                            <img src="../assets/img/uxuibandera.svg" alt="img_uno">
+                            <img src="../assets/img/uxuibandera.svg" alt="img_uno">
+                            <img src="../assets/img/uxuibandera.svg" alt="img_uno">
+                            <img src="../assets/img/uxuibandera.svg" alt="img_uno">
+                        </div>
+                    </section>
+                    
                 </a>
                 <a class="cont_item_mis_servicios cursor-scale small" href="">
                     <h4>UX - WRITING</h4>
                     <P>( 02 )</P>
+                    <section class="cont_slider_banderas">
+                        <div class="sslider_uno">
+                            <img src="../assets/img/writingbandera.svg" alt="img_uno">
+                            <img src="../assets/img/writingbandera.svg" alt="img_uno">
+                            <img src="../assets/img/writingbandera.svg" alt="img_uno">
+                            <img src="../assets/img/writingbandera.svg" alt="img_uno">
+                            <img src="../assets/img/writingbandera.svg" alt="img_uno">
+                        </div>
+                    </section>
                 </a>
                 <a class="cont_item_mis_servicios cursor-scale small" href="">
                     <h4>UX - RESEARSH</h4>
                     <P>( 03 )</P>
+                    <section class="cont_slider_banderas">
+                        <div class="sslider_uno">
+                            <img src="../assets/img/researchbandera.svg" alt="img_uno">
+                            <img src="../assets/img/researchbandera.svg" alt="img_uno">
+                            <img src="../assets/img/researchbandera.svg" alt="img_uno">
+                            <img src="../assets/img/researchbandera.svg" alt="img_uno">
+                            <img src="../assets/img/researchbandera.svg" alt="img_uno">
+                        </div>
+                    </section>
                 </a>
                 <a class="cont_item_mis_servicios cursor-scale small" href="">
                     <h4>DESARRROLLADOR</h4>
                     <P>( 04 )</P>
+                    <section class="cont_slider_banderas">
+                        <div class="sslider_uno">
+                            <img src="../assets/img/devbandera.svg" alt="img_uno">
+                            <img src="../assets/img/devbandera.svg" alt="img_uno">
+                            <img src="../assets/img/devbandera.svg" alt="img_uno">
+                            <img src="../assets/img/devbandera.svg" alt="img_uno">
+                            <img src="../assets/img/devbandera.svg" alt="img_uno">
+                        </div>
+                    </section>
                 </a>
 
             </div>
@@ -336,7 +373,7 @@
 
 
         <!-- ################################### -->
-        <!-- <div class="conten_anima_3d">
+        <div class="conten_anima_3d">
 
             <section class="mis_servicios">
                 <div class="cont_titulo_mis_servicios">
@@ -388,7 +425,7 @@
                 <h2 class="titulo_bandera">"A todos se nos dio un don, el mío es ser cretivo"</h2>
             </section>
 
-        </div> -->
+        </div>
         <!-- ################################### -->
 
         <!-- 8. mi tools -->
@@ -499,28 +536,31 @@
                         <p>01</p>
                     </div>
                     <div class="cont_lista_horizontal_dos">
-                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank" href="https://www.figma.com/">
+                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank"
+                            href="https://www.figma.com/">
                             <div class="titulo">
                                 <h4>Figma</h4>
                             </div>
 
                             <div class="subtitulo">
-                                <p class="titulo_subtitulo">Jedai</p>
+                                <p class="titulo_subtitulo">Jedi</p>
                                 <img src="../assets/img/jedai.svg" alt="">
                             </div>
                             <P>( 01 )</P>
                         </a>
-                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank" href="https://helpx.adobe.com/xd/get-started.html">
+                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank"
+                            href="https://helpx.adobe.com/xd/get-started.html">
                             <div class="titulo">
                                 <h4>Adobe xd</h4>
                             </div>
                             <div class="subtitulo">
-                                <p class="titulo_subtitulo">Jedai</p>
+                                <p class="titulo_subtitulo">Jedi</p>
                                 <img src="../assets/img/jedai.svg" alt="">
                             </div>
                             <P>( 02 )</P>
                         </a>
-                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank" href="https://www.adobe.com/la/products/illustrator.html?gclid=CjwKCAiAmZGrBhAnEiwAo9qHiQAvIovo2hn-ZEXzPiE8PxQ_VFlQBOtFjkpTwLClZ47kRci1q_srWhoCn1UQAvD_BwE&sdid=KQPQL&mv=search&ef_id=CjwKCAiAmZGrBhAnEiwAo9qHiQAvIovo2hn-ZEXzPiE8PxQ_VFlQBOtFjkpTwLClZ47kRci1q_srWhoCn1UQAvD_BwE:G:s&s_kwcid=AL!3085!3!459896392480!e!!g!!adobe%20illustrator!9499870682!97813413798&gad_source=1">
+                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank"
+                            href="https://www.adobe.com/la/products/illustrator.html?gclid=CjwKCAiAmZGrBhAnEiwAo9qHiQAvIovo2hn-ZEXzPiE8PxQ_VFlQBOtFjkpTwLClZ47kRci1q_srWhoCn1UQAvD_BwE&sdid=KQPQL&mv=search&ef_id=CjwKCAiAmZGrBhAnEiwAo9qHiQAvIovo2hn-ZEXzPiE8PxQ_VFlQBOtFjkpTwLClZ47kRci1q_srWhoCn1UQAvD_BwE:G:s&s_kwcid=AL!3085!3!459896392480!e!!g!!adobe%20illustrator!9499870682!97813413798&gad_source=1">
                             <div class="titulo">
                                 <h4>Illustrator</h4>
                             </div>
@@ -530,7 +570,8 @@
                             </div>
                             <P>( 03 )</P>
                         </a>
-                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank" href="https://www.adobe.com/co/products/photoshop.html">
+                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank"
+                            href="https://www.adobe.com/co/products/photoshop.html">
                             <div class="titulo">
                                 <h4>Photoshop</h4>
                             </div>
@@ -540,7 +581,8 @@
                             </div>
                             <P>( 04 )</P>
                         </a>
-                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank" href="https://www.adobe.com/la/products/premiere/campaign/pricing.html?gclid=CjwKCAiAmZGrBhAnEiwAo9qHif1cnAUPIafDp6n5gzY9YpyCkfrh5rDA71Ra8Z9mxd8xPnYJLw6kLBoC6WYQAvD_BwE&sdid=KQPRY&mv=search&--&gad_source=1&s_kwcid=AL!3085!3!473120598648!e!!g!!premiere%20pro&ef_id=ZBU6MgACcMyRHgA9:20231127221202:s">
+                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank"
+                            href="https://www.adobe.com/la/products/premiere/campaign/pricing.html?gclid=CjwKCAiAmZGrBhAnEiwAo9qHif1cnAUPIafDp6n5gzY9YpyCkfrh5rDA71Ra8Z9mxd8xPnYJLw6kLBoC6WYQAvD_BwE&sdid=KQPRY&mv=search&--&gad_source=1&s_kwcid=AL!3085!3!473120598648!e!!g!!premiere%20pro&ef_id=ZBU6MgACcMyRHgA9:20231127221202:s">
                             <div class="titulo">
                                 <h4>Premier pro</h4>
                             </div>
@@ -553,7 +595,7 @@
                     </div>
                 </section>
 
-                
+
                 <section class="cont_horizontal_dos">
 
                     <div class="titulo">
@@ -567,7 +609,7 @@
                             </div>
 
                             <div class="subtitulo">
-                                <p class="titulo_subtitulo">Jedai</p>
+                                <p class="titulo_subtitulo">Jedi</p>
                                 <img src="../assets/img/jedai.svg" alt="">
                             </div>
                             <P>( 01 )</P>
@@ -577,7 +619,7 @@
                                 <h4>OPTIMAL W.</h4>
                             </div>
                             <div class="subtitulo">
-                                <p class="titulo_subtitulo">Jedai</p>
+                                <p class="titulo_subtitulo">Jedi</p>
                                 <img src="../assets/img/jedai.svg" alt="">
                             </div>
                             <P>( 02 )</P>
@@ -587,7 +629,7 @@
                                 <h4>GOOGLE ANALYTICS</h4>
                             </div>
                             <div class="subtitulo">
-                                <p class="titulo_subtitulo">Jedai</p>
+                                <p class="titulo_subtitulo">Jedi</p>
                                 <img src="../assets/img/jedai.svg" alt="">
                             </div>
                             <P>( 03 )</P>
@@ -597,7 +639,7 @@
                                 <h4>HOTJAR</h4>
                             </div>
                             <div class="subtitulo">
-                                <p class="titulo_subtitulo">Jedai</p>
+                                <p class="titulo_subtitulo">Jedi</p>
                                 <img src="../assets/img/jedai.svg" alt="">
                             </div>
                             <P>( 04 )</P>
@@ -618,7 +660,7 @@
                             </div>
 
                             <div class="subtitulo">
-                                <p class="titulo_subtitulo">Jedai</p>
+                                <p class="titulo_subtitulo">Jedi</p>
                                 <img src="../assets/img/jedai.svg" alt="">
                             </div>
                             <P>( 01 )</P>
@@ -689,7 +731,7 @@
                                 <h4>LOTTIE</h4>
                             </div>
                             <div class="subtitulo">
-                                <p class="titulo_subtitulo">Jedai</p>
+                                <p class="titulo_subtitulo">Jedi</p>
                                 <img src="../assets/img/jedai.svg" alt="">
                             </div>
                             <P>( 02 )</P>
@@ -734,7 +776,7 @@
         <section class="cont_pie_de_pagina">
             <div class="cont_titulo_pie">
                 <h2>QUE NO TE DE MIEDO EL <strong>EXITO,</strong> HABLAME!</h2>
-                <img src="../assets/img/videopie.gif" alt="videopie">
+                <img src="../assets/img/carita.svg" alt="videopie">
             </div>
 
             <div class="list_social">
