--- a/pages/index.html
+++ b/pages/index.html
@@ -417,6 +417,48 @@
                     </a>
 
                 </div>
+                <div class="cont_lista_mi_experiencia_movil">
+                    <a class="cont_item_mis_servicios" href="">
+                        <div class="cont_uno">
+                            <h4>GOOGLE INC.</h4>
+                            <div class="subtitulo_experiencia">
+                                <p class="titulo">Diseñador ux - ui</p>
+                                <p class="fecha">2022 - 2022</p>
+                            </div>
+                        </div>
+                        <P>( 01 )</P>
+                    </a>
+                    <a class="cont_item_mis_servicios" href="">
+                        <div class="cont_uno">
+                            <h4>GOOGLE INC.</h4>
+                            <div class="subtitulo_experiencia">
+                                <p class="titulo">Diseñador ux - ui</p>
+                                <p class="fecha">2022 - 2022</p>
+                            </div>
+                        </div>
+                        <P>( 01 )</P>
+                    </a>
+                    <a class="cont_item_mis_servicios" href="">
+                        <div class="cont_uno">
+                            <h4>GOOGLE INC.</h4>
+                            <div class="subtitulo_experiencia">
+                                <p class="titulo">Diseñador ux - ui</p>
+                                <p class="fecha">2022 - 2022</p>
+                            </div>
+                        </div>
+                        <P>( 01 )</P>
+                    </a>
+                    <a class="cont_item_mis_servicios" href="">
+                        <div class="cont_uno">
+                            <h4>GOOGLE INC.</h4>
+                            <div class="subtitulo_experiencia">
+                                <p class="titulo">Diseñador ux - ui</p>
+                                <p class="fecha">2022 - 2022</p>
+                            </div>
+                        </div>
+                        <P>( 01 )</P>
+                    </a>
+                </div>
             </section>
             <div class="cont_figure_geometric_uno">
             </div>
@@ -1474,7 +1516,8 @@
                     <h2>DISEÑO RESEPTIVO</h2>
                 </div>
                 <div class="contenido_pilar">
-                    <p class="parrafo_uno">TODA OPINIÓN ES BIEN RECIBIDA, EN MIS DISEÑOS SIEMPRE ESTOY ATENTO A LO QUE DIGAN LOS USUARIOS PARA MEJORAR.</p>
+                    <p class="parrafo_uno">TODA OPINIÓN ES BIEN RECIBIDA, EN MIS DISEÑOS SIEMPRE ESTOY ATENTO A LO QUE
+                        DIGAN LOS USUARIOS PARA MEJORAR.</p>
                     <p class="parrafo_dos">PILARES DE DISEÑO</p>
                 </div>
                 <div class="cont_animacion_dos">
