add media 1000px

--- a/pages/index.html
+++ b/pages/index.html
@@ -351,7 +351,7 @@
       <div class="cont_item_lista_plus">
         <div class="imgplusdos">
           <?xml version="1.0" standalone="no"?>
-          <svg id="Frame4534632" width="74" height="88" viewBox="0 0 74 88" fill="none"
+          <svg id="Framedos" width="100%" height="none" viewBox="0 0 74 88" fill="none"
             xmlns="http://www.w3.org/2000/svg" style="max-width: 100%; max-height: 100%">
             <path
               d="M36.5025 10H35.8525C26.8779 10 19.6025 17.2754 19.6025 26.25V34.375V42.5V58.1C19.6025 67.4336 27.1689 75 36.5025 75C45.8362 75 53.4025 67.4336 53.4025 58.1V26.9C53.4025 17.5664 45.8362 10 36.5025 10Z"
