add tarjet ha inicio para url que envia a /page/ux_ui.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -185,48 +185,48 @@
       </div>
     </div>
     <div class="cont_contenido_aboutme">
-      <lottie-player id="mydesign1" class="animacion_aboutme"  src="../assets/img/aboutme.json"></lottie-player>  
-        <div class="lista_contenido_aboutme"> 
-      <div class="contenido">
-        <p class="numero_contenido">( 01 )</p>
-        <div class="titulo_contenido">
-          <p class="titulo">Lugar de residencia</p>
-          <p class="contenido_contenido">
-            Soy de barranquilla Colombia y actualmente vivo en soledad -
-            atlántico, (con Disponibilidad de viajar).
-          </p>
+      <lottie-player id="mydesign1" class="animacion_aboutme" src="../assets/img/aboutme.json"></lottie-player>
+      <div class="lista_contenido_aboutme">
+        <div class="contenido">
+          <p class="numero_contenido">( 01 )</p>
+          <div class="titulo_contenido">
+            <p class="titulo">Lugar de residencia</p>
+            <p class="contenido_contenido">
+              Soy de barranquilla Colombia y actualmente vivo en soledad -
+              atlántico, (con Disponibilidad de viajar).
+            </p>
+          </div>
+        </div>
+        <div class="contenido">
+          <p class="numero_contenido">( 02 )</p>
+          <div class="titulo_contenido">
+            <p class="titulo">Diseñador</p>
+            <p class="contenido_contenido">
+              Diseñador ux - ui, desde hace 2 años con especialidad en ux
+              research y ux writing
+            </p>
+          </div>
+        </div>
+        <div class="contenido">
+          <p class="numero_contenido">( 03 )</p>
+          <div class="titulo_contenido">
+            <p class="titulo">Desarrollador móvil</p>
+            <p class="contenido_contenido">
+              Desarrollador jr fLUTTER certificado por la universidad del
+              norte de barranquilla
+            </p>
+          </div>
+        </div>
+        <div class="contenido">
+          <p class="numero_contenido">( 04 )</p>
+          <div class="titulo_contenido">
+            <p class="titulo">Desarrollador Fronted</p>
+            <p class="contenido_contenido">
+              desarrollador frontend certificado en coderhause
+            </p>
+          </div>
         </div>
       </div>
-      <div class="contenido">
-        <p class="numero_contenido">( 02 )</p>
-        <div class="titulo_contenido">
-          <p class="titulo">Diseñador</p>
-          <p class="contenido_contenido">
-            Diseñador ux - ui, desde hace 2 años con especialidad en ux
-            research y ux writing
-          </p>
-        </div>
-      </div>
-      <div class="contenido">
-        <p class="numero_contenido">( 03 )</p>
-        <div class="titulo_contenido">
-          <p class="titulo">Desarrollador móvil</p>
-          <p class="contenido_contenido">
-            Desarrollador jr fLUTTER certificado por la universidad del
-            norte de barranquilla
-          </p>
-        </div>
-      </div>
-      <div class="contenido">
-        <p class="numero_contenido">( 04 )</p>
-        <div class="titulo_contenido">
-          <p class="titulo">Desarrollador Fronted</p>
-          <p class="contenido_contenido">
-            desarrollador frontend certificado en coderhause
-          </p>
-        </div>
-      </div>
-    </div>
     </div>
   </section>
   <!-- 4. servicios -->
@@ -240,7 +240,7 @@
       </div>
     </div>
     <div class="cont_lista_mis_servicios">
-      <a class="cont_item_mis_servicios cursor-scale small" href="">
+      <a class="cont_item_mis_servicios cursor-scale small"  target="_blank" href="../pages/p_ux_ui.html">
         <h4>UX-UI</h4>
         <p>( 01 )</p>
         <section class="cont_slider_banderas">
