add figura 3d plantilla

--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -112,10 +112,9 @@
             </div>
         </div>
 
-        <div class="colum_dos">
+        <div class="columdos">
 
         </div>
-
 
     </section>
     <!-- .2 cinta -->
@@ -211,11 +210,6 @@
         </div>
     </section>
 
-
-
-
-
-
     <!-- *. pie de pagina -->
     <section class="cont_pie_de_pagina">
         <div class="cont_titulo_pie">
@@ -246,6 +240,8 @@
     <!-- javascripts -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="../js/three.js"></script>
+    <script src="../js/admthreeplantillas.js"></script>
     <script src="../js/scroll.js"></script>
 </body>
 
