--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -240,6 +240,7 @@
     <!-- javascripts -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="../js/three.js"></script>
     <script src="../js/admthreeplantillas.js"></script>
     <script src="../js/scroll.js"></script>
