add animate figures in the section inicio

--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -110,6 +110,10 @@
             <div class="contadores">
 
             </div>
+            <div class="stikerlvl">
+                <img src="../assets/img/stikerplantilla.svg" alt="fondostiker">
+                <p>Meddle</p>
+            </div>
         </div>
 
         <div class="columdos">
