--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -46,7 +46,7 @@
                 <p class="titulo_list_menu">Menu</p>
                 <ul class="lista_uno">
                     <div class="cont_opcion_lista">
-                        <a style="font-weight: 400">Home
+                        <a translate="no" style="font-weight: 400">Home
                             <p>(01)</p>
                         </a>
                     </div>
@@ -82,7 +82,6 @@
                             <a href="">LinkedIn</a>
                             <a href="">Facebook</a>
                             <a href="">Instagram</a>
-                            <a href="">Behance</a>
                         </ul>
                     </div>
                     <div class="cont_dos">
@@ -97,7 +96,7 @@
     <section class="cont_inicio">
         <div class="colum_uno">
             <div class="titulo">
-                <h1>
+                <h1 translate="no">
                     UX - UI DESIGN
                 </h1>
             </div>
@@ -112,7 +111,7 @@
             </div>
             <div class="stikerlvl">
                 <img src="../assets/img/stikerplantilla.svg" alt="fondostiker">
-                <p>Meddle</p>
+                <p translate="no">Meddle</p>
             </div>
         </div>
 
@@ -124,7 +123,7 @@
     <!-- .2 cinta -->
     <section class="cont_cinta_plantilla">
         <div class="slider_inicio">
-            <div class="slide-track">
+            <div translate="no" class="slide-track">
                 <div class="slide">
                     <p> UX - UI.</p>
                 </div>
@@ -164,7 +163,6 @@
             </div>
         </div>
     </section>
-
     <!-- .3 cinta -->
     <section class="cont_grilla_proyectos">
         <div class="cont_proyectos" >
@@ -227,10 +225,9 @@
             <div class="cont_uno">
                 <p class="titulo_list_social">Social</p>
                 <ul>
-                    <a href="">LinkedIn</a>
-                    <a href="">Facebook</a>
-                    <a href="">Instagram</a>
-                    <a href="">Behance</a>
+                    <a lang="en" href="">LinkedIn</a>
+                    <a lang="en" href="">Facebook</a>
+                    <a lang="en" href="">Instagram</a>
                 </ul>
             </div>
             <div class="cont_dos">
