ajus responsive and add de body a todas las plantillas

--- a/pages/index.html
+++ b/pages/index.html
@@ -55,25 +55,25 @@
           </div>
           <div class="cont_opcion_lista">
             <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-            <a translate="no" href="">UX - UI
+            <a translate="no" href="/pages/p_ux_ui.html">UX - UI
               <p>(02)</p>
             </a>
           </div>
           <div class="cont_opcion_lista">
             <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-            <a translate="no" href="">UX - Research
+            <a translate="no" href="/pages/p_ux_research.html">UX - Research
               <p>(03)</p>
             </a>
           </div>
           <div class="cont_opcion_lista">
             <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-            <a translate="no" href="">UX - Wrinting
+            <a translate="no" href="/pages/p_ux_writing.html">UX - Wrinting
               <p>(04)</p>
             </a>
           </div>
           <div class="cont_opcion_lista">
             <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-            <a href="">Desarrollador
+            <a href="/pages/p_ux_developer.html">Desarrollador
               <p>(06)</p>
             </a>
           </div>
@@ -82,10 +82,9 @@
           <div class="cont_uno">
             <p class="titulo_list_social">Social</p>
             <ul>
-              <a href="">LinkedIn</a>
-              <a href="">Facebook</a>
-              <a href="">Instagram</a>
-              <a href="">Behance</a>
+              <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/">LinkedIn</a>
+              <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
+              <a href="https://www.instagram.com/yakhsin/">Instagram</a>
             </ul>
           </div>
           <div class="cont_dos">
@@ -1628,10 +1627,9 @@
       <div class="cont_uno">
         <p class="titulo_list_social">Social</p>
         <ul>
-          <a href="">LinkedIn</a>
-          <a href="">Facebook</a>
-          <a href="">Instagram</a>
-          <a href="">Behance</a>
+          <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/">LinkedIn</a>
+          <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
+          <a href="https://www.instagram.com/yakhsin/">Instagram</a>
         </ul>
       </div>
       <div class="cont_dos">
