--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -46,31 +46,31 @@
                 <p class="titulo_list_menu">Menu</p>
                 <ul class="lista_uno">
                     <div class="cont_opcion_lista">
-                        <a translate="no" style="font-weight: 400">Home
+                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
+                        <a translate="no" style="font-weight: 400" href="../pages/index.html">Home
                             <p>(01)</p>
                         </a>
                     </div>
                     <div class="cont_opcion_lista">
-                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-                        <a translate="no" href="">UX - UI
+                        <a translate="no">UX - UI
                             <p>(02)</p>
                         </a>
                     </div>
                     <div class="cont_opcion_lista">
                         <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-                        <a translate="no" href="">UX - Research
+                        <a translate="no" href="/pages/p_ux_research.html">UX - Research
                             <p>(03)</p>
                         </a>
                     </div>
                     <div class="cont_opcion_lista">
                         <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-                        <a translate="no" href="">UX - Wrinting
+                        <a translate="no" href="/pages/p_ux_writing.html">UX - Wrinting
                             <p>(04)</p>
                         </a>
                     </div>
                     <div class="cont_opcion_lista">
                         <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-                        <a href="">Desarrollador
+                        <a href="/pages/p_ux_developer.html">Desarrollador
                             <p>(06)</p>
                         </a>
                     </div>
@@ -79,9 +79,9 @@
                     <div class="cont_uno">
                         <p class="titulo_list_social">Social</p>
                         <ul>
-                            <a href="">LinkedIn</a>
-                            <a href="">Facebook</a>
-                            <a href="">Instagram</a>
+                            <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/">LinkedIn</a>
+                            <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
+                            <a href="https://www.instagram.com/yakhsin/">Instagram</a>
                         </ul>
                     </div>
                     <div class="cont_dos">
@@ -225,9 +225,9 @@
             <div class="cont_uno">
                 <p class="titulo_list_social">Social</p>
                 <ul>
-                    <a lang="en" href="">LinkedIn</a>
-                    <a lang="en" href="">Facebook</a>
-                    <a lang="en" href="">Instagram</a>
+                    <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/">LinkedIn</a>
+                    <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
+                    <a href="https://www.instagram.com/yakhsin/">Instagram</a>
                 </ul>
             </div>
             <div class="cont_dos">
