--- a/pages/p_ux_developer.html
+++ b/pages/p_ux_developer.html
@@ -18,13 +18,238 @@
     <title>Proyectos Web-Movil</title>
 </head>
 
-<body>
-    
-    <!-- javascripts -->
-    <script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js"></script>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <script src="../js/script.js"></script>
+<body class="body_plantilla">
+    <div class="cursor"></div>
+    <div class="float__wapp_dos">
+        <a href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+            target="_blank" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
+            data-aos-duration="500">
+            <img class="botonfloat__wapp" src="../assets\img\float.svg" alt="" />
+            <img class="backfloat__wapp" src="../assets\img\backfloat.svg" alt="" />
+        </a>
+    </div>
+    <!-- Menu -->
+    <section class="conte__menu">
+        <header class="header__index">
+            <div class="cont__logo__nav">
+                <a href="./index.html">
+                    <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="1" style="width: 100px"
+                        autoplay>
+                    </lottie-player>
+                </a>
+            </div>
+            <div class="icono-menu">
+                <div class="bars__menu">
+                    <span class="line1__bars-menu"></span>
+                    <span class="line2__bars-menu"></span>
+                    <span class="line3__bars-menu"></span>
+                </div>
+            </div>
+        </header>
+        <div class="contendor_activo_de_menu">
+            <div class="list_menu">
+                <p class="titulo_list_menu">Menu</p>
+                <ul class="lista_uno">
+                    <div class="cont_opcion_lista">
+                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
+                        <a translate="no" style="font-weight: 400" href="/pages/index.html">Home
+                            <p>(01)</p>
+                        </a>
+                    </div>
+                    <div class="cont_opcion_lista">
+                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
+                        <a translate="no" href="/pages/p_ux_ui.html">UX - UI
+                            <p>(02)</p>
+                        </a>
+                    </div>
+                    <div class="cont_opcion_lista">
+                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
+                        <a translate="no" href="/pages/p_ux_research.html">UX - Research 
+                            <p>(03)</p>
+                        </a>
+                    </div>
+                    <div class="cont_opcion_lista">
+                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
+                        <a translate="no" href="/pages/p_ux_writing.html">UX - Wrinting
+                            <p>(04)</p>
+                        </a>
+                    </div>
+                    <div class="cont_opcion_lista">
+                        <a >Desarrollador
+                            <p>(06)</p>
+                        </a>
+                    </div>
+                </ul>
+                <div class="list_social">
+                    <div class="cont_uno">
+                        <p class="titulo_list_social">Social</p>
+                        <ul>
+                            <a href="">LinkedIn</a>
+                            <a href="">Facebook</a>
+                            <a href="">Instagram</a>
+                        </ul>
+                    </div>
+                    <div class="cont_dos">
+                        <p>Ponerse En Contacto</p>
+                        <h5>Yaksinvasquez@gmail.com</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- .1 inicio -->
+    <section class="cont_inicio">
+        <div class="colum_uno">
+            <div class="titulo">
+                <h1 translate="no">
+                    DEVELOPER Web-Movil
+                </h1>
+            </div>
+            <div class="parrafo">
+                <p>
+                    No solo me encargo de hacer cosas bonitas, sino que también hago que estas cosas sean realmente
+                    útiles y resuelvan las necesidades reales de los usuarios.
+                </p>
+            </div>
+            <div class="contadores">
 
+            </div>
+            <div class="stikerlvl">
+                <img src="../assets/img/stikerplantilla.svg" alt="fondostiker">
+                <p translate="no">&nbspJunior</p>
+            </div>
+        </div>
+
+        <div class="columdos">
+
+        </div>
+
+    </section>
+    <!-- .2 cinta -->
+    <section class="cont_cinta_plantilla">
+        <div class="slider_inicio">
+            <div translate="no" class="slide-track">
+                <div class="slide">
+                    <p> UX - UI.</p>
+                </div>
+                <div class="slide">
+                    <p>DESIGNER.</p>
+                </div>
+                <div class="slide">
+                    <p> UX - UI.</p>
+                </div>
+                <div class="slide">
+                    <p>DESIGNER.</p>
+                </div>
+                <div class="slide">
+                    <p> UX - UI.</p>
+                </div>
+                <div class="slide">
+                    <p>DESIGNER.</p>
+                </div>
+                <div class="slide">
+                    <p> UX - UI.</p>
+                </div>
+                <div class="slide">
+                    <p>DESIGNER.</p>
+                </div>
+                <div class="slide">
+                    <p> UX - UI.</p>
+                </div>
+                <div class="slide">
+                    <p>DESIGNER.</p>
+                </div>
+                <div class="slide">
+                    <p> UX - UI.</p>
+                </div>
+                <div class="slide">
+                    <p>DESIGNER.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- .3 cinta -->
+    <section class="cont_grilla_proyectos">
+        <div class="cont_proyectos" >
+            <img src="../assets/img/proyectoplantilla.png" alt="">
+            <div class="cont_pie_proyecto">
+                <p>
+                    DESIGNER
+                </p>
+                <div class="cont_fecha">
+                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
+                    <p>
+                        01-01-2023
+                    </p>
+                </div>
+
+            </div>
+        </div>
+        <div class="cont_proyectos" >
+            <img src="../assets/img/proyectoplantilla.png" alt="">
+            <div class="cont_pie_proyecto">
+                <p>
+                    DESIGNER
+                </p>
+                <div class="cont_fecha">
+                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
+                    <p>
+                        01-01-2023
+                    </p>
+                </div>
+
+            </div>
+        </div>
+        <div class="cont_proyectos" >
+            <img src="../assets/img/proyectoplantilla.png" alt="">
+            <div class="cont_pie_proyecto">
+                <p>
+                    DESIGNER
+                </p>
+                <div class="cont_fecha">
+                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
+                    <p>
+                        01-01-2023
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- *. pie de pagina -->
+    <section class="cont_pie_de_pagina">
+        <div class="cont_titulo_pie">
+            <h2>QUE NO TE DE MIEDO EL <strong>EXITO,</strong> HABLAME!</h2>
+            <div class="animacionpie">
+                <img class="caritapie" src="../assets/img/caritapie.svg" alt="carita" />
+                <img class="palabrapie" src="../assets/img/palabrapie.svg" alt="carita" />
+            </div>
+        </div>
+        <div class="list_social">
+            <div class="cont_uno">
+                <p class="titulo_list_social">Social</p>
+                <ul>
+                    <a lang="en" href="">LinkedIn</a>
+                    <a lang="en" href="">Facebook</a>
+                    <a lang="en" href="">Instagram</a>
+                </ul>
+            </div>
+            <div class="cont_dos">
+                <p>Ponerse En Contacto</p>
+                <h5>Yaksinvasquez@gmail.com</h5>
+            </div>
+        </div>
+        <img class="grillapie" src="../assets/img/grilla.svg" alt="grilla" />
+    </section>
+
+    <!-- javascripts -->
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="../js/three.js"></script>
+    <script src="../js/admthreeplantillas.js"></script>
+    <script src="../js/scroll.js"></script>
 </body>
 
 </html>
