--- a/pages/p_ux_research.html
+++ b/pages/p_ux_research.html
@@ -19,145 +19,238 @@
     <title>Proyectos Research</title>
 </head>
 
-<body data-barba="wrapper">
-    <div class="loader">
-        <div class="page-transition"></div>
-        <div class="pages-transition"></div>
-    </div>
+<body class="body_plantilla">
     <div class="cursor"></div>
-    <main class="main_plantilla" data-barba="container" data-barba-namespace="p_ux_ui">
-        <div class="float__wapp">
-            <a href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
-                target="_blank" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
-                data-aos-duration="500">
-                <img class="botonfloat__wapp" src="../assets/img/float.svg" alt="">
-                <img class="backfloat__wapp" src="../assets/img/backfloat.svg" alt=""></a>
-        </div>
-        <header>
-            <nav class="barra__menu">
-                <div class="cont__logo__nav">
-                    <a href="/pages/index.html">
-                        <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="1" style="width:100px;"
-                            autoplay>
-                        </lottie-player>
-                    </a>
-                </div>
-                <div class="icono-menu">
-                    <img src="../assets/img/menu1.svg" id="icono-menu">
-                </div>
-            </nav>
-            <div class="cont-menu active" id="menu">
-                <div class="cont__logo__menu"><img class="logo__menu" src="../assets/img/logo2.png" alt="logo_menu"></div>
-                <ul>
-                    <div>
-                    <p>Menu</p>
-                    <li style="margin-top: 1em;"><a href="./index.html"> Inicio </a></li>
-                    <li><a href="inicio.html"> Acerca de mi </a></li>
-                    </div>
-                    <div>
-                    <p>Mis servicios</p>
-                    <li style="margin-top: 1em;"><a href="p_ux_ui.html"> Diseñador ux-ui </a> </li>
-                    <li><a style="color: rgb(0, 0, 0);pointer-events: none;text-decoration-line: underline;text-decoration-thickness: 1px;font-weight: 500;"  href="p_ux_research.html"> Ux Research </a> </li>
-                    <li><a href="p_ux_writing.html"> Ux Writing </a> </li>
-                    <li><a href="p_ux_developer.html"> Desarrollador Web-Movil </a> </li>
-                    </div>
-                </ul>
-                <p> Mis redes sociales</p>
-                    <div  class="redes__menu">
-                        <a href="https://www.facebook.com/yaksin.vasques.5/" target="_blank"><img
-                                src="../assets/img/redfacebook.png" alt="logofacebook"></a>
-                        <a href="https://www.linkedin.com/in/jakhsin-sains-vasquez-pacheco-40a25211a/" target="_blank"><img
-                                src="../assets/img/redlinkedin.png" alt="logolinkedin"></a>
-                        <a href="https://www.instagram.com/yakhsin/" target="_blank"><img 
-                                src="../assets/img/redinstagram.png"
-                                alt="logoinstagram"></a>
-                    </div>
-            </div>
-        </header>
-
-        <section class="cont__info__portafoliouxui">
-            <div class="titulo_plantilla">
-                <h2 class="titulo">
-                    Portafolio
-                </h2>
-                <p>UX Research</p>
-            </div>
-            <div class="herramientas_plantilla">
-                <h2 class="titulo">
-                    Herramientas
-                </h2>
-                <div class="img_herramientas">
-                    <img src="../assets/img/figma.svg" alt="logofigma">
-                    <img src="../assets/img/adobe_xd.svg" alt="logofigma">
-                    <img src="../assets/img/adobe_photoshop.svg" alt="logofigma">
-                    <img src="../assets/img/adobe_illustrator.svg" alt="logofigma">
-                    <img src="../assets/img/jb_youtrack.svg" alt="logofigma">
-                </div>
-            </div>
-            <div class="contador__proyectos">
-                <h2 class="titulo">
-                    Proyectos
-                </h2>
-                <p>1</p>
-            </div>
-            <div class="contador__lvl">
-                <h2 class="titulo">
-                    Nivel
-                </h2>
-                <p>Junior</p>
-            </div>
-            <div class="contador__exp">
-                <h2 class="titulo">
-                    Experiencia
-                </h2>
-                <p>0 Años</p>
-            </div>
-            <div><a href="#">
-                    <img src="../assets/img/logocertificados.svg" alt="logocertificados">
+    <div class="float__wapp_dos">
+        <a href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+            target="_blank" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
+            data-aos-duration="500">
+            <img class="botonfloat__wapp" src="../assets\img\float.svg" alt="" />
+            <img class="backfloat__wapp" src="../assets\img\backfloat.svg" alt="" />
+        </a>
+    </div>
+    <!-- Menu -->
+    <section class="conte__menu">
+        <header class="header__index">
+            <div class="cont__logo__nav">
+                <a href="./index.html">
+                    <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="1" style="width: 100px"
+                        autoplay>
+                    </lottie-player>
                 </a>
             </div>
-        </section>
-        <section class="cont__proyectos">
-            <!-- PROYECTOS -->
-            <article class="proyectos">
-                <img class="proyectos__img" src="../assets/img/imagenresearch1.png" alt="image1de Research">
-                
-                <div class="cont__titulo__proyectos">
-                    <div>
-                        <h2>
-                            Next.js
-                        </h2>
+            <div class="icono-menu">
+                <div class="bars__menu">
+                    <span class="line1__bars-menu"></span>
+                    <span class="line2__bars-menu"></span>
+                    <span class="line3__bars-menu"></span>
+                </div>
+            </div>
+        </header>
+        <div class="contendor_activo_de_menu">
+            <div class="list_menu">
+                <p class="titulo_list_menu">Menu</p>
+                <ul class="lista_uno">
+                    <div class="cont_opcion_lista">
+                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
+                        <a translate="no" style="font-weight: 400" href="/pages/index.html">Home
+                            <p>(01)</p>
+                        </a>
                     </div>
-                    <div class="contadores">
-                        <div class="contador__group">
-                            <img src="../assets/img/usergroup.svg" alt="usergroup">
-                            <p>
-                                2
-                            </p>
-                        </div>
-                        <div class="fecha__proyecto">
-                            <img src="../assets/img/calendar.svg" alt="calendario">
-                            <p>
-                                15/04/23
-                            </p>
-                        </div>
+                    <div class="cont_opcion_lista">
+                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
+                        <a translate="no" href="/pages/p_ux_ui.html">UX - UI
+                            <p>(02)</p>
+                        </a>
                     </div>
-                    <div class="proyecto__boton">
-                        <div class="home__boton cursor-scale small">
-                            <a href="#">Ver proyecto
-                                <img src="../assets/img/flechaboton.svg" alt="flecha"></a>
-                        </div>
+                    <div class="cont_opcion_lista">
+                        <a translate="no">UX - Research
+                            <p>(03)</p>
+                        </a>
+                    </div>
+                    <div class="cont_opcion_lista">
+                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
+                        <a translate="no" href="/pages/p_ux_writing.html">UX - Wrinting
+                            <p>(04)</p>
+                        </a>
+                    </div>
+                    <div class="cont_opcion_lista">
+                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
+                        <a href="/pages/p_ux_developer.html">Desarrollador
+                            <p>(06)</p>
+                        </a>
+                    </div>
+                </ul>
+                <div class="list_social">
+                    <div class="cont_uno">
+                        <p class="titulo_list_social">Social</p>
+                        <ul>
+                            <a href="">LinkedIn</a>
+                            <a href="">Facebook</a>
+                            <a href="">Instagram</a>
+                        </ul>
+                    </div>
+                    <div class="cont_dos">
+                        <p>Ponerse En Contacto</p>
+                        <h5>Yaksinvasquez@gmail.com</h5>
                     </div>
                 </div>
-            </article>
+            </div>
+        </div>
+    </section>
+    <!-- .1 inicio -->
+    <section class="cont_inicio">
+        <div class="colum_uno">
+            <div class="titulo">
+                <h1 translate="no">
+                    UX - RESEARCH
+                </h1>
+            </div>
+            <div class="parrafo">
+                <p>
+                    No solo me encargo de hacer cosas bonitas, sino que también hago que estas cosas sean realmente
+                    útiles y resuelvan las necesidades reales de los usuarios.
+                </p>
+            </div>
+            <div class="contadores">
 
-            
-    </main>
+            </div>
+            <div class="stikerlvl">
+                <img src="../assets/img/stikerplantilla.svg" alt="fondostiker">
+                <p translate="no">&nbspJunior</p>
+            </div>
+        </div>
+
+        <div class="columdos">
+
+        </div>
+
+    </section>
+    <!-- .2 cinta -->
+    <section class="cont_cinta_plantilla">
+        <div class="slider_inicio">
+            <div translate="no" class="slide-track">
+                <div class="slide">
+                    <p> UX - UI.</p>
+                </div>
+                <div class="slide">
+                    <p>DESIGNER.</p>
+                </div>
+                <div class="slide">
+                    <p> UX - UI.</p>
+                </div>
+                <div class="slide">
+                    <p>DESIGNER.</p>
+                </div>
+                <div class="slide">
+                    <p> UX - UI.</p>
+                </div>
+                <div class="slide">
+                    <p>DESIGNER.</p>
+                </div>
+                <div class="slide">
+                    <p> UX - UI.</p>
+                </div>
+                <div class="slide">
+                    <p>DESIGNER.</p>
+                </div>
+                <div class="slide">
+                    <p> UX - UI.</p>
+                </div>
+                <div class="slide">
+                    <p>DESIGNER.</p>
+                </div>
+                <div class="slide">
+                    <p> UX - UI.</p>
+                </div>
+                <div class="slide">
+                    <p>DESIGNER.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- .3 cinta -->
+    <section class="cont_grilla_proyectos">
+        <div class="cont_proyectos" >
+            <img src="../assets/img/proyectoplantilla.png" alt="">
+            <div class="cont_pie_proyecto">
+                <p>
+                    DESIGNER
+                </p>
+                <div class="cont_fecha">
+                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
+                    <p>
+                        01-01-2023
+                    </p>
+                </div>
+
+            </div>
+        </div>
+        <div class="cont_proyectos" >
+            <img src="../assets/img/proyectoplantilla.png" alt="">
+            <div class="cont_pie_proyecto">
+                <p>
+                    DESIGNER
+                </p>
+                <div class="cont_fecha">
+                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
+                    <p>
+                        01-01-2023
+                    </p>
+                </div>
+
+            </div>
+        </div>
+        <div class="cont_proyectos" >
+            <img src="../assets/img/proyectoplantilla.png" alt="">
+            <div class="cont_pie_proyecto">
+                <p>
+                    DESIGNER
+                </p>
+                <div class="cont_fecha">
+                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
+                    <p>
+                        01-01-2023
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- *. pie de pagina -->
+    <section class="cont_pie_de_pagina">
+        <div class="cont_titulo_pie">
+            <h2>QUE NO TE DE MIEDO EL <strong>EXITO,</strong> HABLAME!</h2>
+            <div class="animacionpie">
+                <img class="caritapie" src="../assets/img/caritapie.svg" alt="carita" />
+                <img class="palabrapie" src="../assets/img/palabrapie.svg" alt="carita" />
+            </div>
+        </div>
+        <div class="list_social">
+            <div class="cont_uno">
+                <p class="titulo_list_social">Social</p>
+                <ul>
+                    <a lang="en" href="">LinkedIn</a>
+                    <a lang="en" href="">Facebook</a>
+                    <a lang="en" href="">Instagram</a>
+                </ul>
+            </div>
+            <div class="cont_dos">
+                <p>Ponerse En Contacto</p>
+                <h5>Yaksinvasquez@gmail.com</h5>
+            </div>
+        </div>
+        <img class="grillapie" src="../assets/img/grilla.svg" alt="grilla" />
+    </section>
+
     <!-- javascripts -->
-    <script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <script src="../js/script.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="../js/three.js"></script>
+    <script src="../js/admthreeplantillas.js"></script>
+    <script src="../js/scroll.js"></script>
 </body>
 
 </html>
