add nuevos objetos figurados2 y figuratres2

--- a/pages/index.html
+++ b/pages/index.html
@@ -239,7 +239,7 @@
       </div>
     </div>
     <div class="cont_lista_mis_servicios">
-      <a class="cont_item_mis_servicios cursor-scale small"  target="_blank" href="../pages/p_ux_ui.html">
+      <a class="cont_item_mis_servicios cursor-scale small"  target="_blank" href="/pages/p_ux_ui.html">
         <h4>UX-UI</h4>
         <p>( 01 )</p>
         <section class="cont_slider_banderas">
@@ -252,7 +252,7 @@
           </div>
         </section>
       </a>
-      <a class="cont_item_mis_servicios cursor-scale small" href="">
+      <a class="cont_item_mis_servicios cursor-scale small" href="/pages/p_ux_writing.html">
         <h4>UX - WRITING</h4>
         <p>( 02 )</p>
         <section class="cont_slider_banderas">
@@ -265,7 +265,7 @@
           </div>
         </section>
       </a>
-      <a class="cont_item_mis_servicios cursor-scale small" href="">
+      <a class="cont_item_mis_servicios cursor-scale small" href="/pages/p_ux_research.html">
         <h4>UX - RESEARSH</h4>
         <p>( 03 )</p>
         <section class="cont_slider_banderas">
@@ -278,7 +278,7 @@
           </div>
         </section>
       </a>
-      <a class="cont_item_mis_servicios cursor-scale small" href="">
+      <a class="cont_item_mis_servicios cursor-scale small" href="/pages/p_ux_developer.html">
         <h4>DESARRROLLADOR</h4>
         <p>( 04 )</p>
         <section class="cont_slider_banderas">
