--- a/pages/index.html
+++ b/pages/index.html
@@ -128,6 +128,7 @@
   </section>
   <img class="grilla" src="../assets/img/grilla.svg" alt="grilla" />
   <div class="fondo_inicio">
+    <canvas id="canvasindex"></canvas>
     <img class="bold_uno" src="../assets/img/uno.svg" alt="bold_uno" />
     <img class="bold_dos" src="../assets/img/dos.svg" alt="bold_dos" />
     <img class="bold_tres" src="../assets/img/tres.svg" alt="bold_tres" />
@@ -1647,6 +1648,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script src="../js/three.js"></script>
   <script src="../js/admthree.js"></script>
+  <script type="module" src="../js/appgradient.js"></script>
   <script src="../js/script.js"></script>
 </body>
 
