--- a/pages/index.html
+++ b/pages/index.html
@@ -109,7 +109,6 @@
       </p>
       <a class="boton_setion_uno" href="">
         <p class="boton_setion_uno_contactame">Contáctame</p>
-        <img src="../assets/img/flechabotoncontactame.svg" alt="flacha_contactame" />
       </a>
       <div class="cont_barra_contadores">
         <img src="../assets/img/mecontadores.svg" alt="mecontadores" />
@@ -132,7 +131,24 @@
     <img class="bold_uno" src="../assets/img/uno.svg" alt="bold_uno" />
     <img class="bold_dos" src="../assets/img/dos.svg" alt="bold_dos" />
     <img class="bold_tres" src="../assets/img/tres.svg" alt="bold_tres" />
-    <div class="fondo_blur"></div>
+    <div class="fondo_blur">
+    </div>
+    <div class="fondo_blur_movil">
+      <svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
+        <filter id="displacementFilter">
+          <feTurbulence
+            type="fractalNoise"
+            baseFrequency="0.7"
+            result="turbulence" />
+          <feComposite
+            operator="in"
+            in2="turbulence"
+            result="monoNoise"/>
+        </filter>
+        <rect width="100%" height="100%" style="filter: url(#displacementFilter)"/>
+
+      </svg>
+    </div>
   </div>
   <!-- 2. cinta -->
   <section class="cont_cinta_inicio">
@@ -240,7 +256,7 @@
       </div>
     </div>
     <div class="cont_lista_mis_servicios">
-      <a class="cont_item_mis_servicios cursor-scale small"  target="_blank" href="/pages/p_ux_ui.html">
+      <a class="cont_item_mis_servicios cursor-scale small" target="_blank" href="/pages/p_ux_ui.html">
         <h4>UX-UI</h4>
         <p>( 01 )</p>
         <section class="cont_slider_banderas">
