cambio de botones en index

--- a/pages/index.html
+++ b/pages/index.html
@@ -107,9 +107,10 @@
         “Transformo los problemas de tus productos en <br />
         hermosas soluciones creativas”
       </p>
-      <a class="boton_setion_uno" href="">
-        <p class="boton_setion_uno_contactame">Contáctame</p>
-      </a>
+      <div class="boton_setion_uno">
+        <a class="boton_setion_uno_see" href="">See my work</a>
+        <a class="boton_setion_uno_contac" href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo">Talk me</a>
+      </div>
       <div class="cont_barra_contadores">
         <img src="../assets/img/mecontadores.svg" alt="mecontadores" />
         <div>
@@ -127,7 +128,7 @@
   </section>
   <img class="grilla" src="../assets/img/grilla.svg" alt="grilla" />
   <div class="fondo_inicio">
-    <canvas id="canvasindex"></canvas>
+    <!-- <canvas id="canvasindex"></canvas> -->
     <img class="bold_uno" src="../assets/img/uno.svg" alt="bold_uno" />
     <img class="bold_dos" src="../assets/img/dos.svg" alt="bold_dos" />
     <img class="bold_tres" src="../assets/img/tres.svg" alt="bold_tres" />
