--- a/pages/index.html
+++ b/pages/index.html
@@ -417,6 +417,22 @@
       <img class="bold_dos" src="../assets/img/dos.svg" alt="bold_dos" />
       <img class="bold_tres" src="../assets/img/tres.svg" alt="bold_tres" />
       <div class="fondo_blur"></div>
+      <div class="fondo_blur_movil">
+        <svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
+          <filter id="displacementFilter">
+            <feTurbulence
+              type="fractalNoise"
+              baseFrequency="0.7"
+              result="turbulence" />
+            <feComposite
+              operator="in"
+              in2="turbulence"
+              result="monoNoise"/>
+          </filter>
+          <rect width="100%" height="100%" style="filter: url(#displacementFilter)"/>
+  
+        </svg>
+      </div>
     </div>
   </section>
   <!-- ###################################  -->
