add ajustes en menu lista uno

--- a/pages/index.html
+++ b/pages/index.html
@@ -49,7 +49,7 @@
         <p class="titulo_list_menu">Menu</p>
         <ul class="lista_uno">
           <div class="cont_opcion_lista">
-            <a style="font-weight: 400">Home
+            <a style="color:#b8b8b8 ;">Home
               <p>(01)</p>
             </a>
           </div>
