--- a/pages/p_ux_developer.html
+++ b/pages/p_ux_developer.html
@@ -75,7 +75,7 @@
                         </a>
                     </div>
                     <div class="cont_opcion_lista">
-                        <a >Desarrollador
+                        <a style="color:#b8b8b8 ;">Desarrollador
                             <p>(06)</p>
                         </a>
                     </div>
