--- a/pages/p_ux_writing.html
+++ b/pages/p_ux_writing.html
@@ -62,7 +62,7 @@
                         </a>
                     </div>
                     <div class="cont_opcion_lista">
-                        <a translate="no" >UX - Wrinting
+                        <a translate="no" style="color:#b8b8b8 ;" >UX - Wrinting
                             <p>(04)</p>
                         </a>
                     </div>
