--- a/pages/p_ux_research.html
+++ b/pages/p_ux_research.html
@@ -64,7 +64,7 @@
                         </a>
                     </div>
                     <div class="cont_opcion_lista">
-                        <a translate="no">UX - Research
+                        <a translate="no" style="color:#b8b8b8 ;">UX - Research
                             <p>(03)</p>
                         </a>
                     </div>
