--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -52,7 +52,7 @@
                         </a>
                     </div>
                     <div class="cont_opcion_lista">
-                        <a translate="no">UX - UI
+                        <a translate="no" style="color:#b8b8b8 ;">UX - UI
                             <p>(02)</p>
                         </a>
                     </div>
