add nuevo section reels

--- a/pages/index.html
+++ b/pages/index.html
@@ -880,6 +880,33 @@
       </section>
     </section>
   </div>
+  
+  
+
+  <!-- 6. reel diagonal -->
+  <section class="cont_reel_diagonal">
+    <div class="cont_fixed_reel">
+      <h3 class="titulo_reel">DISEÑADOR DE EXPERIENCIAS POSITIVA</h3>
+      <p class="contenido_reel">UNA DE MIS METODOLOGIAS DE DISEÑO PREFERIDAS ES LA ATOMIC DESING Y ES LA QUE MAS USO REGULARMENTE EN TODOS MIS PROYECTOS.</p>
+    </div>
+    <div class="cont_reels">
+      <div class="reel_uno">
+        <img src="../assets/img/iilustreeluno.svg" alt="">
+      </div>
+
+      <div class="reel_dos">
+        <lottie-player  autoplay class="animacion_aboutme" src="../assets/img/aboutme.json"></lottie-player>
+      </div>
+
+      <div class="reel_tres">
+        <img src="../assets/img/iilustreeluno.svg" alt="">
+      </div>
+
+    </div>
+  </section>
+
+
+
   <section class="cont_pilar">
     <div class="cont_contenido_pilar">
       <div class="contador_pilar">
@@ -897,7 +924,7 @@
       </div>
       <div class="cont_animacion_uno">
         <?xml version="1.0" standalone="no"?>
-        <svg id="svguno" width="923" height="734" viewBox="0 0 923 734" fill="none" xmlns="http://www.w3.org/2000/svg"
+        <svg id="svguno" width="100%" height="734" viewBox="0 0 923 734" fill="none" xmlns="http://www.w3.org/2000/svg"
           style="max-width: 100%; max-height: 100%">
           <g filter="url(#filter0_d_988_2394)">
             <path
