--- a/pages/index.html
+++ b/pages/index.html
@@ -330,7 +330,7 @@
             <div class="titulo_contenido">
               <p class="titulo">Desarrollador Fronted</p>
               <p class="contenido_contenido">
-                desarrollador frontend certificado en coderhause
+                desarrollador frontend certificado en coderhouse
               </p>
             </div>
           </div>
@@ -667,7 +667,7 @@
 
       <section id="bandera" class="bandera">
         <h2 class="titulo_bandera">
-          "A todos se nos dio un don, el mío es ser cretivo"
+          "A todos se nos dio un don, el mío es ser creativo"
         </h2>
       </section>
     </div>
