--- a/pages/index.html
+++ b/pages/index.html
@@ -1057,13 +1057,10 @@
       </section>
     </div>
 
-
-    <!-- ################################### 
+    <!-- ################################### -->
     <section class="conte_pilares">
       <div class="contenedor_de_animaciones">
-
         <div class="cont_animacion">
-
           <div class="cont_animacion_uno">
             <?xml version="1.0" standalone="no"?>
             <svg
@@ -2467,7 +2464,6 @@
                   x1="476.545"
                   y1="345.369"
                   x2="450.951"
-
                   y2="454.434"
                   gradientUnits="userSpaceOnUse"
                 >
@@ -2663,25 +2659,40 @@
             </svg>
           </div>
 
+          <div class="fondo_negro"></div>
+
+          <div class="fondo_blanco"></div>
         </div>
 
-      </div>      
-    </section> -->
+        <div class="cont_texto">
+          <div class="contenedor_texto">
+            <h4 id="contador_uno" class="contador">01</h4>
+          </div>
+          <div class="contenedor_texto">
+            <h4 id="titulo_uno" class="titulo">ATOMIC DESING</h4>
+          </div>
+          <div class="contenedor_texto">
+            <p id="contenido_uno" class="contenido">
+              UNA DE MIS METODOLOGIAS DE DISEÑO PREFERIDAS ES LA ATOMIC DESING Y
+              ES LA QUE MAS USO REGULARMENTE EN TODOS MIS PROYECTOS.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- ################################### -->
-
 
     <!-- 8. reel diagonal -->
     <section class="cont_reel_diagonal">
-      
-    <div class="cont_fixed_reel">
+      <div class="cont_fixed_reel">
         <h3 class="titulo_reel">DISEÑADOR DE EXPERIENCIAS POSITIVA</h3>
         <p class="contenido_reel">
           UNA DE MIS METODOLOGIAS DE DISEÑO PREFERIDAS ES LA ATOMIC DESING Y ES
           LA QUE MAS USO REGULARMENTE EN TODOS MIS PROYECTOS.
         </p>
-    </div> 
+      </div>
 
-    <div class="cont_reels">
+      <div class="cont_reels">
         <div class="reel_uno">
           <img src="../assets/img/iilustreeluno.svg" alt="" />
         </div>
@@ -2698,8 +2709,7 @@
         <div class="reel_tres">
           <img src="../assets/img/iilustreeluno.svg" alt="" />
         </div>
-    </div> 
-
+      </div>
     </section>
 
     <!-- *. pie de pagina -->
