add nueva animacion

--- a/pages/index.html
+++ b/pages/index.html
@@ -2738,7 +2738,7 @@
             autoplay
             loop
             class="animacion_aboutme"
-            src="../assets/img/aboutme.json"
+            src="../assets/img/animacionbook.json"
           ></lottie-player>
         </div>
 
