add nueva animacion

--- a/pages/index.html
+++ b/pages/index.html
@@ -2730,7 +2730,12 @@
 
       <div class="cont_reels">
         <div class="reel_uno">
-          <img src="../assets/img/iilustreeluno.svg" alt="" />
+          <lottie-player
+            autoplay
+            loop
+            class="animacion_aboutme"
+            src="../assets/img/iilustreeluno.json"
+          ></lottie-player>
         </div>
 
         <div class="reel_dos">
@@ -2748,6 +2753,7 @@
       </div>
     </section>
 
+  
     <!-- *. pie de pagina -->
     <section class="cont_pie_de_pagina">
       <div class="cont_titulo_pie">
