ajuste a peso de contenido y cantidad de vectores en animacion bandera

--- a/pages/index.html
+++ b/pages/index.html
@@ -2761,7 +2761,7 @@
         <div class="animacionpie">
           <img
             class="caritapie"
-            src="../assets/img/caritapie.svg"
+            src="../assets/img/caritapie.png"
             alt="carita"
           />
           <img
