--- a/pages/p_ux_developer.html
+++ b/pages/p_ux_developer.html
@@ -222,7 +222,7 @@
         <div class="cont_titulo_pie">
             <h2>QUE NO TE DE MIEDO EL <strong>EXITO,</strong> HABLAME!</h2>
             <div class="animacionpie">
-                <img class="caritapie" src="../assets/img/caritapie.svg" alt="carita" />
+                <img class="caritapie" src="../assets/img/caritapie.png" alt="carita" />
                 <img class="palabrapie" src="../assets/img/palabrapie.svg" alt="carita" />
             </div>
         </div>
