add img en dev.proyectos

--- a/pages/p_ux_developer.html
+++ b/pages/p_ux_developer.html
@@ -102,7 +102,7 @@
         <div class="colum_uno">
             <div class="titulo">
                 <h1 translate="no">
-                    DEVELOPER Web-Movil
+                    DEVELOPER Movil-Web
                 </h1>
             </div>
             <div class="parrafo">
@@ -120,8 +120,8 @@
             </div>
         </div>
 
-        <div class="columdos">
-
+        <div class="columdosdev">
+            <img class="imgdev" src="../assets/img/develoimg.png" alt="dev">
         </div>
 
     </section>
@@ -247,8 +247,6 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="../js/three.js"></script>
-    <script src="../js/admthreeplantillas.js"></script>
     <script src="../js/scroll.js"></script>
 </body>
 
